--- a/resources/css/components/nav/toc.css
+++ b/resources/css/components/nav/toc.css
@@ -108,6 +108,9 @@
                             left: var(--spacing-lg);
                             height: calc(100% - 0.6rem);
                             border-inline-start: 1px solid var(--color-pink-light-3-static);
+                            @container style(--color-scheme: dark) {
+                                border-color: var(--color-pink-light-2);
+                            }
                         }
                     }
 
